# fileKor

./: .commit_msg.txt  .gitignore  AGENTS.md  CHANGELOG.md  README.md  arkti_mockup.html  config-example.yaml  labels.properties  pyproject.toml
docs/: database.md  development.md  index.md  installation.md  library.md  llm.md  taxonomy.md  usage.md
specs/: SPEC_CLI.md
src/filekor/: __init__.py  __main__.py  cli.py  constants.py  db.py  delete.py  events.py  labels.py  llm.py  models.py  processor.py  sidecar.py  status.py
src/filekor/adapters/: __init__.py  base.py  exiftool.py
src/filekor/cli/: __init__.py  base.py  db.py  delete.py  extract.py  labels.py  list.py  merge.py  process.py  sidecar.py  status.py  summary.py  sync.py
src/filekor/core/: config.py  delete.py  hasher.py  labels.py  list.py  llm.py  merge.py  processor.py  status.py  summary.py
src/filekor/core/models/: __init__.py  db_models.py  file_status.py  process_result.py
test-files/: sample.json  sample.txt
test-files/test-files-2/: sample.md
tests/: test_adapter.py  test_cli_db.py  test_cli_delete.py  test_cli_extract.py  test_cli_list.py  test_cli_merge.py  test_cli_sidecar.py  test_cli_status.py  test_cli_summary.py  test_cli_sync.py  test_core_config.py  test_core_delete.py  test_core_events.py  test_core_hasher.py  test_core_labels_extra.py  test_core_list.py  test_core_merge.py  test_core_processor.py  test_core_status.py  test_core_summary.py  test_db.py  test_labels.py  test_llm_providers.py
